// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table.filter clearFilters should support params 1`] = `
<div
  class="dcloud-dropdown-custom-view"
  id="customFilter"
>
  <span
    id="setNoParams"
  >
    setSelectedKeys
  </span>
  <span
    id="resetNoParams"
  >
    Reset
  </span>
  <span
    id="setConfirm"
  >
    setSelectedKeys
  </span>
  <span
    id="resetConfirm"
  >
    Reset
  </span>
  <span
    id="setClose"
  >
    setSelectedKeys
  </span>
  <span
    id="resetClose"
  >
    Reset
  </span>
  <span
    id="setParams"
  >
    setSelectedKeys
  </span>
  <span
    id="resetParams"
  >
    Reset
  </span>
</div>
`;

exports[`Table.filter override custom filter correctly 1`] = `
<div
  class="dcloud-dropdown-custom-view"
  id="customFilter"
>
  <span
    id="setSelectedKeys"
  >
    setSelectedKeys
  </span>
  <span
    id="confirm"
  >
    Confirm
  </span>
  <span
    id="reset"
  >
    Reset
  </span>
  <span
    id="simulateOnSelect"
  >
    SimulateOnSelect
  </span>
</div>
`;

exports[`Table.filter renders custom filter icon as ReactNode 1`] = `
<div
  class="dcloud-table-wrapper"
>
  <div
    class="dcloud-spin-nested-loading"
  >
    <div
      class="dcloud-spin-container"
    >
      <div
        class="dcloud-table"
      >
        <div
          class="dcloud-table-container"
        >
          <div
            class="dcloud-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <colgroup />
              <thead
                class="dcloud-table-thead"
              >
                <tr>
                  <th
                    class="dcloud-table-cell"
                  >
                    <div
                      class="dcloud-table-filter-column"
                    >
                      <span
                        class="dcloud-table-column-title"
                      >
                        Name
                      </span>
                      <span
                        class="dcloud-dropdown-trigger dcloud-table-filter-trigger"
                        role="button"
                        tabindex="-1"
                      >
                        <span
                          class="customize-icon"
                        />
                      </span>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                class="dcloud-table-tbody"
              >
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="dcloud-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="dcloud-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="dcloud-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="dcloud-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders custom filter icon as string correctly 1`] = `
<div
  class="dcloud-table-wrapper"
>
  <div
    class="dcloud-spin-nested-loading"
  >
    <div
      class="dcloud-spin-container"
    >
      <div
        class="dcloud-table"
      >
        <div
          class="dcloud-table-container"
        >
          <div
            class="dcloud-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <colgroup />
              <thead
                class="dcloud-table-thead"
              >
                <tr>
                  <th
                    class="dcloud-table-cell"
                  >
                    <div
                      class="dcloud-table-filter-column"
                    >
                      <span
                        class="dcloud-table-column-title"
                      >
                        Name
                      </span>
                      <span
                        class="dcloud-dropdown-trigger dcloud-table-filter-trigger"
                        role="button"
                        tabindex="-1"
                      >
                        string
                      </span>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                class="dcloud-table-tbody"
              >
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="dcloud-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="dcloud-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="dcloud-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="dcloud-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders custom filter icon correctly 1`] = `
<span
  class="customize-icon"
>
  filtered
</span>
`;

exports[`Table.filter renders custom filter icon with right Tooltip title 1`] = `
<div
  class="dcloud-table-wrapper"
>
  <div
    class="dcloud-spin-nested-loading"
  >
    <div
      class="dcloud-spin-container"
    >
      <div
        class="dcloud-table"
      >
        <div
          class="dcloud-table-container"
        >
          <div
            class="dcloud-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <colgroup />
              <thead
                class="dcloud-table-thead"
              >
                <tr>
                  <th
                    class="dcloud-table-cell"
                  >
                    <div
                      class="dcloud-table-filter-column"
                    >
                      <span
                        class="dcloud-table-column-title"
                      >
                        Name
                      </span>
                      <span
                        class="dcloud-dropdown-trigger dcloud-table-filter-trigger"
                        role="button"
                        tabindex="-1"
                      >
                        <span
                          class="dcloud-tooltip-open"
                        >
                          Tooltip
                        </span>
                        <div>
                          <div
                            class="dcloud-tooltip dcloud-zoom-big-fast-appear dcloud-zoom-big-fast-appear-prepare dcloud-zoom-big-fast"
                            style="opacity: 0;"
                          >
                            <div
                              class="dcloud-tooltip-content"
                            >
                              <div
                                class="dcloud-tooltip-arrow"
                              >
                                <span
                                  class="dcloud-tooltip-arrow-content"
                                />
                              </div>
                              <div
                                class="dcloud-tooltip-inner"
                                role="tooltip"
                              >
                                title
                              </div>
                            </div>
                          </div>
                        </div>
                      </span>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                class="dcloud-table-tbody"
              >
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="dcloud-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="dcloud-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="dcloud-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="dcloud-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table.filter renders filter correctly 1`] = `
<div
  class="dcloud-table-wrapper"
>
  <div
    class="dcloud-spin-nested-loading"
  >
    <div
      class="dcloud-spin-container"
    >
      <div
        class="dcloud-table"
      >
        <div
          class="dcloud-table-container"
        >
          <div
            class="dcloud-table-content"
          >
            <table
              style="table-layout: auto;"
            >
              <colgroup />
              <thead
                class="dcloud-table-thead"
              >
                <tr>
                  <th
                    class="dcloud-table-cell"
                  >
                    <div
                      class="dcloud-table-filter-column"
                    >
                      <span
                        class="dcloud-table-column-title"
                      >
                        Name
                      </span>
                      <span
                        class="dcloud-dropdown-trigger dcloud-table-filter-trigger"
                        role="button"
                        tabindex="-1"
                      >
                        <span
                          aria-label="filter"
                          class="anticon anticon-filter"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="filter"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M349 838c0 17.7 14.2 32 31.8 32h262.4c17.6 0 31.8-14.3 31.8-32V642H349v196zm531.1-684H143.9c-24.5 0-39.8 26.7-27.5 48l221.3 376h348.8l221.3-376c12.1-21.3-3.2-48-27.7-48z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                class="dcloud-table-tbody"
              >
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="0"
                >
                  <td
                    class="dcloud-table-cell"
                  >
                    Jack
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="1"
                >
                  <td
                    class="dcloud-table-cell"
                  >
                    Lucy
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="2"
                >
                  <td
                    class="dcloud-table-cell"
                  >
                    Tom
                  </td>
                </tr>
                <tr
                  class="dcloud-table-row dcloud-table-row-level-0"
                  data-row-key="3"
                >
                  <td
                    class="dcloud-table-cell"
                  >
                    Jerry
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
